<resources>
    <string name="app_name">Painter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_personal_setting">PersonalSetting</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_multiple_connection">MultipleConnection</string>
    <string name="title_activity_log_in_v2">LogIn_v2</string>
    <string name="title_activity_sign_in">Sign_in</string>
    <string name="title_activity_sign_up">Sign_up</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="title_activity_friendlist">Friendlist</string>
    <string name="title_activity_canvas">Canvas</string>
    <string name="title_activity_listactivity">Listactivity</string>
    <string name="title_activity_gallery_detail">GalleryDetail</string>
    <string name="title_activity_friend_test">FriendTest</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="app_version">Version: %1$s</string>
    <string name="about_text">Free open source graphics
    editor under MIT License</string>
    <string name="app_developers">Developer:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="more">More</string>
    <string name="which_app">Complete action using</string>
    <string name="clear_bitmap_prompt_title">Clear</string>
    <string name="clear_bitmap_prompt">Do you want to clear canvas?</string>
    <string name="saving_title">Saving</string>
    <string name="saving_to_sd">Picture is saving. Please wait...</string>
    <string name="wallpaper_title">Wallpaper</string>
    <string name="aply_wallpaper">Apply wallpaper. Please wait...</string>
    <string name="exit_app_prompt_title">Exit</string>
    <string name="exit_app_prompt">Do you want to save picture before the exit?</string>
    <string name="share_prompt_title">Share</string>
    <string name="share_prompt">Do you want to save image before share it?</string>
    <string name="open_prompt_title">Open via</string>
    <string name="open_prompt">Do you want to save image before open another file?</string>
    <string name="share_image_title">Share via</string>
    <string name="select_language_title">Select language</string>
    <string name="copy_file_title">Copy files</string>
    <string name="sign_up_success">註冊成功</string>
    <string name="sign_up_existed">此信箱已註冊過，請前往登入頁面</string>
    <string name="sign_up_fail">註冊失敗</string>
    <string name="wrong_password">密碼錯誤</string>
    <string name="account_doesnt_exist">帳號不存在</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="sign_up">註冊</string>
    <string name="log_in">登入</string>
    <string name="save">儲存</string>
    <string name="change_pic">修改圖片</string>
    <string name="personal_setting">個人設定</string>
    <string name="setting_gallery">Gallery分享</string>
    <string name="menu_brush">Brush</string>
    <string name="menu_rotate">Rotate</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_open">Open</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_set_wallpaper">Set as Wallpaper</string>
    <string name="menu_file">File</string>
    <string name="brush_size">Brush size</string>
    <string name="blur_radius">Blur radius</string>
    <string name="blur_style">Blur style</string>
    <string name="blur_type_select">Select blur type</string>
    <string-array name="blur_types">
        <item>None</item>
        <item>Normal</item>
        <item>Solid</item>
        <item>Outer</item>
        <item>Inner</item>
    </string-array>
    <string name="brush_color">Brush color</string>
    <string name="color_pick">Pick a color</string>
    <string name="invalid_file">File format is invalid</string>
    <string name="file_not_found">File not found</string>
    <string name="sd_card_not_writeable">SD card not available for recording</string>
    <string name="sd_card_not_available">SD card not available</string>
    <string name="wallpaper_setted">Wallpaper was successfully setted</string>
    <string name="wallpaper_error">Wallpaper was not setted. Error occured</string>
    <string name="settings_version">version</string>
    <string name="settings_orientation">orientation</string>
    <string name="settings_last_picture">lastPicture</string>
    <string name="settings_brush_size">brushSize</string>
    <string name="settings_brush_color">brushColor</string>
    <string name="settings_brush_blur_style">brushBlurStyle</string>
    <string name="settings_brush_blur_radius">brushBlurRadius</string>
    <string name="settings_brush_type">brushType</string>
    <string name="settings_force_open_file">forceOpenFile</string>
    <string name="settings_downloadBitmap">downloadBitmap</string>
    <string name="settings_downloadBitmapSrc">downloadBitmapSrc</string>
    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string-array name="locales">
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string-array name="backup_opened_options">
        <item>Only from other folders</item>
        <item>Always</item>
        <item>Never</item>
    </string-array>
    <string-array name="backup_opened_options_codes">
        <item>10</item>
        <item>20</item>
        <item>100</item>
    </string-array>
    <string-array name="before_exit_options">
        <item>Submit to save file</item>
        <item>Save working file</item>
        <item>No action</item>
    </string-array>
    <string-array name="before_exit_options_codes">
        <item>10</item>
        <item>20</item>
        <item>100</item>
    </string-array>
    <string-array name="volume_buttons_options">
        <item>Change brush size</item>
        <item>Undo/Redo</item>
    </string-array>
    <string-array name="volume_buttons_options_codes">
        <item>10</item>
        <item>20</item>
    </string-array>
    <string name="preferences_interface_category">Interface</string>
    <string name="preferences_behavior_category">Behavior</string>
    <string name="preferences_shortcuts_category">Shortcuts</string>
    <string name="preferences_backup_category">Backup</string>
    <string name="preferences_about_category">About</string>
    <string name="preferences_language">preferencesLanguage</string>
    <string name="preferences_language_title">Language</string>
    <string name="preferences_language_summary">Set interface language. Restart needed</string>
    <string name="preferences_last_file">lastFile</string>
    <string name="preferences_last_file_title">Open last file</string>
    <string name="preferences_last_file_summary">Open last working file on startup</string>
    <string name="preferences_backup_openeded_file">backupOpenningFile</string>
    <string name="preferences_backup_openeded_file_title">Opened files backup</string>
    <string name="preferences_backup_openeded_file_summary">Copy opened files in the application folder</string>
    <string name="preferences_tooltips">preferencesTooltips</string>
    <string name="preferences_tooltips_title">Show tooltips</string>
    <string name="preferences_tooltips_summary">Show tricks and tips on startup</string>
    <string name="preferences_shake">preferencesShake</string>
    <string name="preferences_shake_title">Shake to clear</string>
    <string name="preferences_shake_summary">Clear canvas during device shaking</string>
    <string name="preferences_about">preferencesAbout</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_about_summary">Information about application</string>
    <string name="preferences_before_exit">preferencesBeforeExit</string>
    <string name="preferences_before_exit_title">Action before exit</string>
    <string name="preferences_before_exit_summary">Action before application exit</string>
    <string name="preferences_volume_shortcuts">preferencesVolumeShortcuts</string>
    <string name="preferences_volume_shortcuts_title">Volume buttons</string>
    <string name="preferences_volume_shortcuts_summary">Set action for volume buttons</string>
    <string name="title_activity_test">Test</string>
    <string name="home_menu_challenge">出題</string>
    <string name="home_menu_guess">猜題</string>
    <string name="home_menu_gallery">Gallery</string>
    <string name="home_menu_practice">練習模式</string>
    <string name="home_menu_setting">設定</string>
    <string name="home_menu_achievement">成就</string>
    <string name="title_activity_frame">frame</string>
    <string name="pass_done">接力完成!</string>
</resources>