<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.painter.PersonalSetting" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/save"
        android:title="@string/save"
        app:showAsAction="always"
        android:orderInCategory="3"
        app:titleTextAppearance="@style/Toolbar.TextSize"
        />
    <item
        android:id="@+id/changPic"
        android:title="@string/change_pic"
        app:showAsAction="always"
        android:orderInCategory="2"
        />

</menu>
