<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <painter.PainterCanvas
        android:id="@+id/canvas"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.painter.Canvas"/>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:background="#FFFFFF" />

    <ImageButton
        android:id="@+id/settingbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:src="@drawable/setting" />


    <LinearLayout
        android:id="@+id/paint_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:background="#FFFFFF"
            android:src="@drawable/undo" />

        <ImageButton
            android:id="@+id/ImageButton03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="#FFFFFF"
            android:src="@drawable/pencil" />

        <ImageButton
            android:id="@+id/ImageButton02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="#FFFFFF"
            android:src="@drawable/brush" />

        <ImageButton
            android:id="@+id/ImageButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="#FFFFFF"
            android:src="@drawable/marker" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/eraser" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/blackbutton"
            android:onClick="paintClicked" />


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/redbutton"
            android:onClick="paintClicked" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:background="@drawable/orangebutton"
            android:onClick="paintClicked" />


        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:background="@drawable/yellowbutton"
            android:onClick="paintClicked" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:background="@drawable/greenbutton"
            android:onClick="paintClicked" />


        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/view1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"

            android:background="@drawable/bulebutton"
            android:onClick="paintClicked" />


        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:background="@drawable/purplebutton"
            android:onClick="paintClicked" />

        <ImageButton
            android:id="@+id/settingbtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF"
            android:clickable="true"
            android:src="@drawable/ic_settings_grey600_36dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/settings_layout"
        style="@style/Settings">

        <LinearLayout
            android:id="@+id/presets_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal">

            <LinearLayout style="@style/BrushsPresets">

                <ImageButton
                    android:id="@+id/preset_pencil"
                    style="@style/BrushsPresets.Preset"
                    android:onClick="setPreset"
                    android:src="@drawable/pencil" />

                <ImageButton
                    android:id="@+id/preset_brush"
                    style="@style/BrushsPresets.Preset"
                    android:onClick="setPreset"
                    android:src="@drawable/brush" />

                <ImageButton
                    android:id="@+id/preset_marker"
                    style="@style/BrushsPresets.Preset"
                    android:onClick="setPreset"
                    android:src="@drawable/marker" />

                <ImageButton
                    android:id="@+id/preset_pen"
                    style="@style/BrushsPresets.Preset"
                    android:onClick="setPreset"
                    android:src="@drawable/pen" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/properties_bar"
            style="@style/BrushProperties.Wrapper">

            <LinearLayout style="@style/BrushProperties.Controls">

                <TextView
                    style="@style/BrushProperties.Label"
                    android:text="@string/brush_color" />

                <ImageButton
                    style="@style/BrushProperties.Control.Image"
                    android:onClick="changeBrushColor"
                    android:src="@drawable/ic_menu_colors" />
            </LinearLayout>

            <LinearLayout style="@style/BrushProperties.Controls">

                <TextView
                    style="@style/BrushProperties.Label"
                    android:text="@string/brush_size" />

                <SeekBar
                    android:id="@+id/brush_size"
                    style="@style/BrushProperties.Control" />
            </LinearLayout>

            <LinearLayout style="@style/BrushProperties.Controls">

                <TextView
                    style="@style/BrushProperties.Label"
                    android:text="@string/blur_radius" />

                <SeekBar
                    android:id="@+id/brush_blur_radius"
                    style="@style/BrushProperties.Control" />
            </LinearLayout>

            <LinearLayout style="@style/BrushProperties.Controls.Last">

                <TextView
                    style="@style/BrushProperties.Label"
                    android:text="@string/blur_style" />

                <painter.BlurStyleSpinner
                    android:id="@+id/brush_blur_style"
                    style="@style/BrushProperties.Control"
                    android:entries="@array/blur_types"
                    android:prompt="@string/blur_type_select" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
